# Beagle_play_project

./: .gitignore  CMakeLists.txt
include/dashboard_server/: dashboard_server.hpp  http_utils.hpp  json_utils.hpp  state.hpp
include/udp_recv/: udp_recv.hpp
src/dashboard_server/: dashboard_server.cpp  http_utils.cpp  json_utils.cpp  main.cpp  state.cpp
src/udp_recv/: udp_recv.cpp
src/udp_send/: udp_send.cpp
web/: index.html
